@@ -4,8 +4,8 @@ This is JSAPI 0.1, a base layer for JSAPI2 development.
 
 Follow the description in INSTALL to install JSAPI.
 
-JSAPI comes without any warrenty. Read COPYING for more details.
-Licenses of used libraries can be optained from the realated web site.
+JSAPI comes without any warranty. Read COPYING for more details.
+Licenses of used libraries can be obtained from the related web site.
 Read INSTALL for more details.
 
 If you have any questions have a look at our web site.
